--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  {{!--
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> --}}
+  <link rel="stylesheet" href="../../public/css/styles.css" media="screen" title="no title" charset="utf-8">
+  <title>Movie Friends</title>
 </head>
 
 <body>
+  <nav>
+    <ul class="container">
+      <li>Home</li>
+      <li>Profile</li>
+      <li class="search">
+        <input type="text" class="search-input" placeholder="Search">
+      </li>
+      <li>Logout</li>
+    </ul>
+  </nav>
   {{{body}}}
 </body>
 
