changes to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,22 +5,21 @@
   <meta charset="utf-8">
   {{!--
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> --}}
-  <link rel="stylesheet" href="../../public/css/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8" type="text/css">
   <title>Movie Friends</title>
 </head>
 
 <body>
+  <div id= "mainContainer">
   <nav>
-    <ul class="container">
+    <ul class="navContainer">
       <li>Home</li>
-      <li>Profile</li>
-      <li class="search">
-        <input type="text" class="search-input" placeholder="Search">
-      </li>
+      <li>Search</li>
       <li>Logout</li>
     </ul>
   </nav>
   {{{body}}}
+  </div>
 </body>
 
 </html>
