--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,18 @@
   {{!--
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> --}}
   <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i|Roboto:500" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
   <title>Movie Friends</title>
 </head>
 
 <body>
   <div id= "mainContainer">
   <nav>
+     <h4 id="navHeader"><i class="fa fa-ticket fa-3x" aria-hidden="true"></i>Movie Friends</h4>
     <ul class="navContainer">
+     
       <li>Home</li>
       <li>Search</li>
       <li>Logout</li>
