--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-  <div id= "mainContainer">
+  {{!-- <div id= "mainContainer"> --}}
+    
   <nav>
-     <h4 id="navHeader"><i class="fa fa-ticket fa-3x" aria-hidden="true"></i>Movie Friends</h4>
+     
+     <h4 id="navHeader"><i class="fa fa-film"></i> Movie Friends</h4>
     <ul class="navContainer">
      
       <li>Home</li>
@@ -24,7 +26,7 @@
     </ul>
   </nav>
   {{{body}}}
-  </div>
+  
 </body>
 
 </html>
