--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,6 +4,7 @@
 </div>
 
 <div id="profileContainer">
+    <h2>My Friends</h2>
     {{#each friends}}
     {{> friendCards/friendCards}}
     {{/each}}
@@ -11,12 +12,19 @@
 <hr>
 <div id = "myRatingsDiv">
     <h2>My Ratings</h2>
+    <div class= "ratings">
     {{#each ratings}}
         <div class = "aRatingDiv">
         <p>Name: {{name}}</p>
         <p>OMDB Rating: {{omdbRating}}</p>
         <p>My rating: {{userRating}}</p>
-        <hr>
         </div>
+        <div class = "buttonsOnRatings">
+        <button type="button" value="Update" data-id = {{id}} class="updateReviewButton">Update</button>
+        <button type="button" value="Delete" data-id = {{id}} class="deleteReviewButton">Delete</button>
+        </div>
+        
+        
     {{/each}}
+    </div>
 </div>
