--- a/views/partials/friendCards/friendCards.handlebars
+++ b/views/partials/friendCards/friendCards.handlebars
@@ -3,16 +3,17 @@
     <div class="fCardHeader">
         <img src = {{userImg}} alt = "{{userName}}'s profile image"/>
         <h2>{{userName}}</h2>
-        
+        <p>Location: {{location}}</p>
 
     </div>
 
     <div class="fCardBody">
-        <p>Location: {{location}}</p>
+        
         {{#each ratings}}
-        <p>Movie Name: {{name}} </p>
+        <h3>Movie Name: {{name}} </h3>
         <p>OMDB Rating: {{omdbRating}}</p>
         <p>Movie Friend's rating: {{userRating}}</p>
+        <hr>
         {{/each}}
     </div>
 
