--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,8 +20,8 @@
         <p>My rating: {{userRating}}</p>
         </div>
         <div class = "buttonsOnRatings">
-        <button type="button" value="Update" data-id = {{id}} class="updateReviewButton">Update</button>
-        <button type="button" value="Delete" data-id = {{id}} class="deleteReviewButton">Delete</button>
+        <button type="button" value="Update" data-id = "{{id}}" class="updateReviewButton">Update</button>
+        <button type="button" value="Delete" data-id = "{{id}}" class="deleteReviewButton">Delete</button>
         </div>
         
         
