--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -97,24 +97,27 @@
         padding: 50px 50px 0 50px;
         .ratings {
             display: flex;
-            // flex-direction: column;
+            flex-direction: column;
             .aRatingDiv:nth-child(2n-1) {
                 background-color: lightgray;
             }
 
             .buttonsOnRatings {
                 display: flex;
-                flex-direction: column;
+                // flex-direction: column;
                 padding-right: 10px!important;
                 flex-basis: 0;
                 flex-grow: 1;
                 .updateReviewButton {
-                    flex-basis: 0;
+                    // flex-basis: 0;
+                    flex-grow: 1;
+                }
+                .deleteReviewButton{
+                    // flex-basis: 0;
                     flex-grow: 1;
                 }
             }
             .buttonsOnRatings:nth-child(2n) {
-                background-color: lightgray;
                 padding: 10px 0;
             }
         }
@@ -124,6 +127,11 @@
         .aRatingDiv {
             margin: 0 auto;
             width: 95%;
+            display: flex;
+
+            .myRatingText{
+                width: 90%;
+            }
         }
     }
     
