--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,26 +5,25 @@
 
 <div id="profileContainer">
     <h2>My Friends</h2>
-    {{#each friends}}
-    {{> friendCards/friendCards}}
-    {{/each}}
+    {{#each friends}} {{> friendCards/friendCards}} {{/each}}
 </div>
 <hr>
-<div id = "myRatingsDiv">
+<div id="myRatingsDiv">
     <h2>My Ratings</h2>
-    <div class= "ratings">
-    {{#each ratings}}
-        <div class = "aRatingDiv">
-        <p>Name: {{name}}</p>
-        <p>OMDB Rating: {{omdbRating}}</p>
-        <p>My rating: {{userRating}}</p>
+    <div class="ratings">
+        {{#each ratings}}
+        <div class="aRatingDiv">
+            <div class="myRatingText">
+                <p>Name: {{name}}</p>
+                <p>OMDB Rating: {{omdbRating}}</p>
+                <p>My rating: {{userRating}}</p>
+
+            </div>
+            <div class="buttonsOnRatings">
+                <button type="button" value="Update" data-id="{{id}}" class="updateReviewButton">Update</button>
+                <button type="button" value="Delete" data-id="{{id}}" class="deleteReviewButton">Delete</button>
+            </div>
         </div>
-        <div class = "buttonsOnRatings">
-        <button type="button" value="Update" data-id = "{{id}}" class="updateReviewButton">Update</button>
-        <button type="button" value="Delete" data-id = "{{id}}" class="deleteReviewButton">Delete</button>
-        </div>
-        
-        
-    {{/each}}
+        {{/each}}
     </div>
 </div>
