change to main and profile to figure out how to enclose nav, profile header, and profile container in topContainer

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,6 +73,9 @@ nav {
       display: flex;
       flex-direction: column; }
 
+#topContainer {
+  height: 100vh; }
+
 #myRatingsDiv {
   height: 100vh;
   padding: 50px 50px 0 50px; }
