--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -91,6 +91,10 @@
             }
         }
     }
+
+    #topContainer {
+        height: 100vh;
+    }
     
     #myRatingsDiv {
         height: 100vh;
