--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  {{!-- <div id= "mainContainer"> --}}
+  <div id= "topContainer">
     
   <nav>
      
@@ -26,6 +26,7 @@
     </ul>
   </nav>
   {{{body}}}
+  
 </body>
 
 </html>
