--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,6 +7,8 @@
     <h2>My Friends</h2>
     {{#each friends}} {{> friendCards/friendCards}} {{/each}}
 </div>
+{{!-- try to close topContainer class --}}
+</div>
 <hr>
 <div id="myRatingsDiv">
     <h2>My Ratings</h2>
