--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,7 +71,18 @@ nav {
         margin-top: 10px; }
     #profileContainer #friendCardsContainer .fCardBody {
       display: flex;
-      flex-direction: column; }
+      flex-direction: column;
+      overflow: hidden;
+      position: relative;
+      height: 50%; }
+      #profileContainer #friendCardsContainer .fCardBody:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(transparent 80%, white); }
 
 #topContainer {
   height: 100vh; }
