--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -88,7 +88,23 @@
             .fCardBody {
                 display: flex;
                 flex-direction: column;
+                overflow: hidden;
+                position: relative;
+                height: 50%;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background-image: linear-gradient(transparent 80%, white);
+                            }
             }
+
+            
+
+            
         }
     }
 
