--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -7,14 +7,20 @@
         color: black;
     }
     
+    .test {
+        background-image: linear-gradient(to bottom, #246547, #478b88, #87afbc, #cad4e1, #ffffff);
+        padding-top: 10px;
+        height: 92vh;
+    }
+    
     nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        height: auto;
+        height: 8vh;
         width: 100vw;
-        padding: 10px;
+        // padding: 10px;
         background-color: #246547;
         .navContainer {
             display: flex;
@@ -26,7 +32,7 @@
             }
         }
         #navHeader {
-            margin-left: 20px;
+            margin-left: 15px;
             font-size: 2.5em;
             font-family: 'Roboto', sans-serif;
             color: white;
@@ -38,7 +44,7 @@
     
     #profileHeader {
         display: flex;
-        margin: 10px 0 30px 20px;
+        margin: 0 0 30px 20px;
         align-items: center;
         img {
             height: 120px;
@@ -106,6 +112,49 @@
     
     #topContainer {
         height: 100vh;
+        .container {
+            background-image: linear-gradient(to bottom, #246547, #478b88, #87afbc, #cad4e1, #ffffff);
+            background-size: cover;
+            height: 92vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            form {
+                background-color: rgba(255, 255, 255, 0.582);
+                border-radius: 5px;
+                height: 40vh;
+                width: 50vw;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                border: 1px solid #246547;
+                ul {
+                    margin: 0 auto;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    height: 60%;
+                    padding: 0;
+                    li {
+                        list-style: none;
+                        display: flex;
+                        flex-direction: column;
+                        label {
+                            // font-family: 'Roboto', sans-serif;
+                            margin-right: 5px;
+                        }
+                    }
+                    button {
+                        color: white;
+                        background-color: #246547;
+                        padding: 5px;
+                        border: 1px solid black;
+                        border-radius: 2px;
+                    }
+                }
+            }
+        }
     }
     
     #myRatingsDiv {
@@ -159,6 +208,7 @@
     
     @media screen and (max-width: 600px) {
         nav {
+            height: auto;
             .navContainer {
                 width: 100vw;
             }
