--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
 
 .welcomeLogo {
   padding-left: 15px;
-  border-bottom: 1px solid #246547;
+  border-bottom: 1px solid #101f0a;
   font-family: 'Roboto', sans-serif;
   height: 8vh;
   font-size: 2.5em;
@@ -45,7 +45,7 @@
           margin-right: 5px; }
       .container form ul button {
         color: white;
-        background-color: #246547;
+        background-color: #101f0a;
         padding: 5px;
         border: 1px solid black;
         border-radius: 2px; }
