--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,9 +20,9 @@
      <h4 id="navHeader"><i class="fa fa-film"></i>Movie Friends</h4>
     <ul class="navContainer">
      
-      <li>Home</li>
-      <li>Search</li>
-      <li>Logout</li>
+      <li><a href="/profile/1">Home</a></li>
+      <li><a href="/search">Search</a></li>
+      <li><a href="/">Logout</a></li>
     </ul>
   </nav>
   {{{body}}}
