Updated movie and friend search (without appropriate backend routing

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i|Roboto:500" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+  <script type="text/javascript" src="./js/jQuery.js"></script>
+  <script type="text/javascript" src="./js/hbs.js"></script>
   <title>Movie Friends</title>
 </head>
 
@@ -20,7 +21,7 @@
      <h4 id="navHeader"><i class="fa fa-film"></i>Movie Friends</h4>
     <ul class="navContainer">
      
-      <li><a href="/profile/1">Home</a></li>
+      <li><a id="home-button" href="/userprofile">Home</a></li>
       <li><a href="/search">Search</a></li>
       <li><a href="/">Logout</a></li>
     </ul>
