--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,7 +20,7 @@
             <div class="myRatingText">
                 <p>Name: {{name}}</p>
                 <p>OMDB Rating: {{omdbRating}}</p>
-                <p>My rating: {{userRating}}</p>
+                <p id="my-rating">My rating: {{userRating}}</p>
 
             </div>
             <div class="buttonsOnRatings">
