--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-<form>
+<form class="search-for-thing">
     <ul class="flex-outer">
         <li>
             <label for="searchBox">Search</label>
