--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <div class="test">
 <div id="profileHeader">
-    <img src={{userImg}} alt="{{userName}}'s profile image" />
-    <h2>Welcome, {{userName}}</h2>
+    <img src={{userImg}} alt="{{name}}'s profile image" />
+    <h2>Welcome, {{name}}</h2>
 </div>
 
 <div id="profileContainer">
