I don't know how to get Friends data given User

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <div class="test">
 <div id="profileHeader">
-    <img src={{userImg}} alt="{{name}}'s profile image" />
-    <h2>Welcome, {{name}}</h2>
+    <img src={{user.userImg}} alt="{{user.name}}'s profile image" />
+    <h2>Welcome, {{user.name}}</h2>
 </div>
 
 <div id="profileContainer">
