--- a/views/partials/friendCards/friendCards.handlebars
+++ b/views/partials/friendCards/friendCards.handlebars
@@ -1,8 +1,8 @@
 <div id="friendCardsContainer">
 
     <div class="fCardHeader">
-        <img src = {{userImg}} alt = "{{userName}}'s profile image"/>
-        <h2>{{userName}}</h2>
+        <img src = {{userImg}} alt = "{{name}}'s profile image"/>
+        <h2>{{name}}</h2>
         <p>Location: {{location}}</p>
 
     </div>
