trying to undo renees fucking mistakes made everythign look like shit

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <div class="test">
 <div id="profileHeader">
-    <img src={{user.userImg}} alt="{{user.name}}'s profile image" />
-    <h2>Welcome, {{user.name}}</h2>
+    <img src={{userImg}} alt="{{userName}}'s profile image" />
+    <h2>Welcome, {{userName}}</h2>
 </div>
 
 <div id="profileContainer">
@@ -20,7 +20,7 @@
             <div class="myRatingText">
                 <p>Name: {{name}}</p>
                 <p>OMDB Rating: {{omdbRating}}</p>
-                <p id="my-rating">My rating: {{userRating}}</p>
+                <p>My rating: {{userRating}}</p>
 
             </div>
             <div class="buttonsOnRatings">
